...

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_wallet_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/wallet_name"
                android:inputType="text"
...
            <RadioGroup
                android:id="@+id/operation_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:checkedButton="@+id/expense"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
