...
                    android:layout_marginTop="8dp"
                    android:text="@string/all_balance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/account_title" />

                <TextView
                    android:id="@+id/tv_main_currency_value"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="@+id/tv_balane"
                    app:layout_constraintTop_toBottomOf="@+id/tv_balane" />
...
